# cpp-interop

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
common/: BUILD.bazel  common_cpp_lib.cc
js/: BUILD.bazel  index.js  package.json
python/: BUILD.bazel  nano_bindings.cc  nano_main.py  pb_bindings.cc  pb_main.py  py_cpp_lib.cc  py_cpp_lib.h
