module(name = "cpp-interop")

bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_python", version = "1.6.3")

#http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Python
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "nanobind", version = "2.4.0")