load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@nanobind_bazel//:build_defs.bzl", "nanobind_extension", "nanobind_stubgen")

cc_library(
    name = "py-cpp-lib",
    srcs = ["py_cpp_lib.cc"],
    hdrs = ["py_cpp_lib.h"],
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "pb_extension",
    srcs = ["pb_bindings.cc"],
    deps = [
        ":py-cpp-lib",
    ],
    visibility = ["//visibility:public"],
)

py_library(
    name = "pb_ext_lib",
    data = [":pb_extension"],
    imports = ["."],
)

py_binary(
    name = "pb-app",
    srcs = ["pb_main.py"],
    main = "pb_main.py",
    deps = [
        ":pb_ext_lib",
    ],
)

nanobind_extension(
    name = "nano_ext",
    srcs = ["nano_bindings.cc"],
    # Add any necessary C++ dependencies here, e.g., if you're using other libraries
    deps = [":py-cpp-lib"],
)

py_library(
    name = "nano_ext_lib",
    data = [":nano_ext"],
    imports = ["."],
)

py_binary(
    name = "nano-app",
    srcs = ["nano_main.py"],
    main = "nano_main.py",
    deps = [
        ":nano_ext_lib",
    ],
)
